@@ -1,47 +1,51 @@
 package com.ljh;
 
-import java.util.List;
+
+
+import com.ljh.untils.zookeeper.ZookeeperNode;
+import com.ljh.untils.zookeeper.ZookeeperUtils;
+import lombok.extern.slf4j.Slf4j;
+import org.apache.zookeeper.*;
+
+
+import java.util.Arrays;
+
+import static com.ljh.Constant.*;
 
 /**
  * 管理注册中心
  */
+@Slf4j
 public class Application {
+
 
     public static void main(String[] args) {
 
-        // 帮我们创建基础目录
-        // yrpc-metadata   (持久节点)
-        //  └─ providers （持久节点）
-        //  		└─ service1  （持久节点，接口的全限定名）
-        //  		    ├─ node1 [data]     /ip:port
-        //  		    ├─ node2 [data]
-        //            └─ node3 [data]
-        //  └─ consumers
-        //        └─ service1
-        //             ├─ node1 [data]
-        //             ├─ node2 [data]
-        //             └─ node3 [data]
-        //  └─ config
-
 
         // 创建一个zookeeper实例
-        ZooKeeper zooKeeper = ZookeeperUtils.createZookeeper();
+        ZooKeeper zooKeeper =createZookeeper();
 
         // 定义节点和数据
-        String basePath = "/yrpc-metadata";
-        String providerPath = basePath + "/providers";
-        String consumersPath = basePath + "/consumers";
-        ZookeeperNode baseNode = new ZookeeperNode(basePath, null);
-        ZookeeperNode providersNode = new ZookeeperNode(providerPath, null);
-        ZookeeperNode consumersNode = new ZookeeperNode(consumersPath, null);
+        String basePath = "/rpc-metadata";
+        ZookeeperNode baseNode = new ZookeeperNode(BASE_PATH, null);
+        ZookeeperNode providersNode = new ZookeeperNode(BASE_PROVIDERS_PATH, null);
+        ZookeeperNode consumersNode = new ZookeeperNode(BASE_CONSUMERS_PATH, null);
 
         // 创建节点
-        List.of(baseNode, providersNode, consumersNode).forEach(node -> {
-            ZookeeperUtils.createNode(zooKeeper,node,null, CreateMode.PERSISTENT);
+        Arrays.asList(baseNode, providersNode, consumersNode).stream().forEach(node ->{
+
+            ZookeeperUtils.createNode(zooKeeper, node, null, CreateMode.PERSISTENT);
+
         });
 
         // 关闭连接
         ZookeeperUtils.close(zooKeeper);
 
+
     }
+
+
+
+
+
 }
